# pascal_interpreter

./: CMakeLists.txt  README.md  clog.cpp  clog.hpp  interpreter.cpp  interpreter.hpp  token.cpp  token.hpp
